--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
   },
   "author": "Jonathan Brink <jonathandavidbrink@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "format": "prettier --write ."
+  },
   "bugs": {
     "url": "https://github.com/jonbri/buffaloes/issues"
   },
   "homepage": "https://github.com/jonbri/buffaloes#readme",
   "bin": {
     "buffaloes": "index.js"
+  },
+  "dependencies": {
+    "commander": "^14.0.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
